# DS413-Jupyter-Book

./: .buildinfo  Lab_Task_3.html  README.html  README.md  _config.yml  _toc.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
Blog/: Blog_Post.ipynb  formula-1.jfif
Laboratory/: Laboratory_Task_1.html  Laboratory_Task_2.html  Laboratory_Task_3.html  Laboratory_Task_3.ipynb  Laboratory_Task_4.html  Laboratory_Task_5.html  Laboratory_Task_6.html  Laboratoty_Task_1.html
Lectures/: Lecture_Task_1.html
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
_build/logs/: myst.build.json
_sources/: README.md  intro.md
_sources/Laboratory/: Laboratory_Task_3.ipynb  Laboratory_Task_6.ipynb  Laboratoty_Task_1.ipynb
content/: index.html
content/Blog/: Blog_Post.html  Blog_Post.ipynb  formula-2.jfif
content/Laboratory/: Laboratory_Task_1.html  Laboratory_Task_3.html  Laboratory_Task_4.html  Laboratory_Task_5.html  Laboratory_Task_6.html  Laboratory_Task_6.ipynb  Laboratory_Task_7.html  Laboratory_Task_7.ipynb
content/Lecture/: Lecture_Task_1.html  Lecture_Task_1.ipynb
mybook/: _config.yml  _toc.yml
mybook/content/: index.html
myfirstbook/: _config.yml  _toc.yml  intro.md
myfirstbook/Laboratory/: Laboratory_Task_1.ipynb  Laboratory_Task_2.ipynb  Laboratory_Task_3.ipynb  Laboratory_Task_4.ipynb  Laboratory_Task_5.ipynb  Laboratory_Task_6.ipynb
myfirstbook/Lectures/: Lecture_Task_1.ipynb
myfirstbook/content/: intro.md
(+166 files in other folders)
