[project]
name = "ds413-jupyter-book-ver2"
version = "0.1.0"
description = ""
authors = [
    {name = "Visaviern Mosqueda ",email = "181252326+visaviernm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=2.0.2,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "altair (>=6.0.0,<7.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
