[project]
name = "ds413-jupyter-book-ver2"
version = "0.1.0"
description = ""
authors = [
    {name = "Visaviern Mosqueda ",email = "181252326+visaviernm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "jupyter-book (<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
